# fishare

./: pyproject.toml
fishare/: pyproject.toml
fishare/fishare/: main.py
fishare/fishare/api/: files.py
fishare/fishare/views/: homepage.py
