[tool.poetry]
name = "fishare"
version = "0.1.0"
description = ""
authors = ["dolukac <dominik.lukac@t-systems.com>"]

[tool.poetry.dependencies]
python = "^3.9"
httpie = "^2.6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
